--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.16.2",
+    "nodemailer": "^7.0.13",
     "nodemon": "^3.1.11"
   }
 }
