--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.13.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.11"
   },
